src/styles/components/headline.scss
.fatex-headline {
    position: relative;
    margin-bottom: 0.5rem;
    color: var(--fatex-light-text-color, $light-text-color);
    background: $fatex-primary-color;

    &::before {
        @include cutout-top-left;
    }

    &::after {
        @include cutout-bottom-right;
    }

    &--center {
        text-align: center;
    }

    &--chat {
        width: 70%;
        margin: $component-padding auto;
    }

    &--fixed-icon {
        padding-right: $component-padding * 4;
    }

    &--helper {
        display: none;
        cursor: pointer;
    }

    &--inline-sheet {
        border-bottom: none;
        padding-right: 50px;

        &::before {
            @include reset-cutouts;
        }

        &::after {
            @include reset-cutouts;
            @include cutout-top-right;
        }
    }

    &__icon {
        position: absolute;
        top: 0;
        left: 100%;
        z-index: 100;
        transform: translate(-25px, 0px);
        font-weight: 900;
        color: $sheet-background;
        -webkit-text-stroke: 2px $fatex-primary-color;
        text-shadow: initial;

        &--skill {
            left: initial;
            right: 100%;
            font-size: 24px;
            text-shadow: 1px 1px 1px $sheet-background;
            transform: translate(15px, -7px);
        }

        &--negative {
            color: $caution-color;
        }
    }

    &__image {
        border-radius: 0;
        height: 32px;
        width: 32px;
        object-fit: cover;
        object-position: 0% 0;
    }

    &__text {
        position: relative;
        margin: 0;
        padding: $component-padding / 2 $component-padding * 2;
        border: none;
        font-size: 13px;
        font-weight: bold;
        text-transform: uppercase;
    }
}

.fatex-section-heading {
    display: block;
    position: relative;
    color: $primary-text-color;

    &--no-border {
        border: none;
        margin-bottom: $component-padding;
    }

    h2 {
        border-color: $fatex-primary-color;
    }
}

.fatex-js-edit-mode {
    .fatex-headline--helper {
        display: inherit;
    }
}

